[package]
name = "common"
version = "0.1.0"
authors = ["Martin Billinger <mbillingr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
cranelift = "0.51"
cranelift-module = "0.51"
cranelift-simplejit = "0.51"